--- a/pyobservability/templates/index.html
+++ b/pyobservability/templates/index.html
@@ -19,10 +19,12 @@
 <header class="topbar">
     <div class="brand">Node Monitor</div>
 
+    {% if service_map is not none %}
     <div class="tab-navigation">
         <button id="nodes-tab" class="tab-btn active">Nodes</button>
         <button id="services-tab" class="tab-btn">Services</button>
     </div>
+    {% endif %}
 
     <div class="controls">
         <label for="node-select" id="node-select-label">Node:</label>
@@ -291,9 +293,11 @@
     window.MONITOR_TARGETS = {{ targets | tojson }};
 </script>
 
+{% if service_map is not none %}
 <script>
     window.SERVICE_MAP = {{ service_map | tojson }};
 </script>
+{% endif %}
 
 <script>
     const logoutEndpoint = "{{ logout }}";
